# app-gateway1

./: README.md
.init/: .init-build-cmd  .init-test-tool
.knowledge/: .knowledge.json  App2AppProvider_README.md.json  App2AppProvider_Source_ThunderApp2AppProvider_App2AppProvider.cpp.json  App2AppProvider_Source_ThunderApp2AppProvider_App2AppProvider.h.json  App2AppProvider_Source_ThunderApp2AppProvider_Module.h.json  App2AppProvider_Source_ThunderApp2AppProvider_SessionRegistry.cpp.json  App2AppProvider_Source_ThunderApp2AppProvider_SessionRegistry.h.json  AppGateway_AppGateway.cpp.json  AppGateway_AppGateway.h.json  AppGateway_Module.cpp.json  AppGateway_Module.h.json  AppGateway_README.md.json  AppGateway_Source_ThunderAppGateway_AppGateway.cpp.json  AppGateway_Source_ThunderAppGateway_AppGateway.h.json  AppGateway_Source_ThunderAppGateway_LaunchClient.cpp.json  AppGateway_Source_ThunderAppGateway_LaunchClient.h.json  AppGateway_Source_ThunderAppGateway_Module.h.json  AppGateway_Source_ThunderAppGateway_Registry.cpp.json  AppGateway_Source_ThunderAppGateway_Registry.h.json  AppGateway_Tests_test_AppGateway_LaunchClient.cpp.json  AppGateway_Tests_test_AppGateway_Plugin.cpp.json  AppGateway_Tests_test_AppGateway_Registry.cpp.json  AppGateway_Tests_test_basic_runner.cpp.json  AppGateway_tests_integration_AppGatewayJsonRpcTests.cpp.json  AppGateway_tests_mocks_MockAppManager.h.json  AppGateway_tests_mocks_MockShell.h.json  AppGateway_tests_mocks_interfaces_IAppManager.h.json  AppGateway_tests_unit_AppGatewayUnitTests.cpp.json  AppNotifications_README.md.json  AppNotifications_Source_ThunderAppNotifications_AppNotifications.cpp.json  AppNotifications_Source_ThunderAppNotifications_AppNotifications.h.json  AppNotifications_Source_ThunderAppNotifications_Module.h.json  AppNotifications_Source_ThunderAppNotifications_NotificationStore.cpp.json  AppNotifications_Source_ThunderAppNotifications_NotificationStore.h.json  LaunchDelegate_README.md.json  LaunchDelegate_Source_ThunderLaunchDelegate_Config.cpp.json  LaunchDelegate_Source_ThunderLaunchDelegate_Config.h.json  LaunchDelegate_Source_ThunderLaunchDelegate_DeepLinkProvider.cpp.json  LaunchDelegate_Source_ThunderLaunchDelegate_DeepLinkProvider.h.json  LaunchDelegate_Source_ThunderLaunchDelegate_ILaunchProvider.h.json  (+496 more)
.knowledge/.vector_db/: milvus.db
App2AppProvider/: CMakeLists.txt  README.md
App2AppProvider/Source/ThunderApp2AppProvider/: App2AppProvider.cpp  App2AppProvider.h  Module.h  SessionRegistry.cpp  SessionRegistry.h
App2AppProvider/config/: App2AppProvider.conf.in
AppGateway/: AppGateway.cpp  AppGateway.h  CMakeLists.txt  Module.cpp  Module.h  README.md
AppGateway/Source/ThunderAppGateway/: AppGateway.cpp  AppGateway.h  LaunchClient.cpp  LaunchClient.h  Module.h  Registry.cpp  Registry.h
AppGateway/Tests/: CMakeLists.txt  test_AppGateway_LaunchClient.cpp  test_AppGateway_Plugin.cpp  test_AppGateway_Registry.cpp  test_basic_runner.cpp
AppGateway/config/: AppGateway.conf.in
AppGateway/tests/: CMakeLists.txt
AppGateway/tests/integration/: AppGatewayJsonRpcTests.cpp
AppGateway/tests/mocks/: MockAppManager.h  MockShell.h
AppGateway/tests/mocks/interfaces/: IAppManager.h
AppGateway/tests/unit/: AppGatewayUnitTests.cpp
AppNotifications/: CMakeLists.txt  README.md
AppNotifications/Source/ThunderAppNotifications/: AppNotifications.cpp  AppNotifications.h  Module.h  NotificationStore.cpp  NotificationStore.h
AppNotifications/config/: AppNotifications.conf.in
LaunchDelegate/: CMakeLists.txt  README.md
LaunchDelegate/Source/ThunderLaunchDelegate/: Config.cpp  Config.h  DeepLinkProvider.cpp  DeepLinkProvider.h  ILaunchProvider.h  LaunchDelegate.cpp  LaunchDelegate.h  LaunchSessionTracker.cpp  LaunchSessionTracker.h  LocalAppManagerProvider.cpp  LocalAppManagerProvider.h  Module.h  ProviderRegistry.cpp  ProviderRegistry.h
LaunchDelegate/config/: LaunchDelegate.conf.in
dependencies/etc/WPEFramework/: config.json
dependencies/etc/init.d/: wpeframework
dependencies/install/include/: cdmi.h
dependencies/install/include/WPEFramework/Modules/: FindConfigGenerator.cmake  FindJsonGenerator.cmake  FindProxyStubGenerator.cmake
dependencies/install/include/WPEFramework/definitions/: Module.h
dependencies/install/include/WPEFramework/interfaces/json/: Ids.h  (+1 more)
dependencies/install/include/WPEFramework/tracing/: tracing.h
dependencies/install/include/WPEFramework/websocket/: jsonrpc.h
dependencies/install/lib/: libWPEFrameworkCOM.so.1  libWPEFrameworkCore.so.1  libWPEFrameworkCryptalgo.so.1  libWPEFrameworkCryptalgo.so.1.0.0  libWPEFrameworkDefinitions.so.1  libWPEFrameworkMessaging.so.1  libWPEFrameworkMessaging.so.1.0.0  libWPEFrameworkPlugins.so.1  libWPEFrameworkWebSocket.so.1  libWPEFrameworkWebSocket.so.1.0.0
dependencies/install/lib/cmake/CompileSettingsDebug/: CompileSettingsDebugConfig.cmake  CompileSettingsDebugTargets.cmake
dependencies/install/lib/cmake/WPEFramework/: WPEFrameworkConfig.cmake
dependencies/install/lib/cmake/WPEFrameworkCOM/: WPEFrameworkCOMConfig.cmake  WPEFrameworkCOMTargets-debug.cmake  WPEFrameworkCOMTargets.cmake
dependencies/install/lib/cmake/WPEFrameworkCore/: WPEFrameworkCoreConfig.cmake  WPEFrameworkCoreTargets-debug.cmake  WPEFrameworkCoreTargets.cmake
dependencies/install/lib/cmake/WPEFrameworkCryptalgo/: WPEFrameworkCryptalgoConfig.cmake  WPEFrameworkCryptalgoTargets-debug.cmake  WPEFrameworkCryptalgoTargets.cmake
dependencies/install/lib/cmake/WPEFrameworkDefinitions/: WPEFrameworkDefinitionsConfig.cmake  WPEFrameworkDefinitionsTargets-debug.cmake  WPEFrameworkDefinitionsTargets.cmake
dependencies/install/lib/cmake/WPEFrameworkMessaging/: WPEFrameworkMessagingConfig.cmake  WPEFrameworkMessagingTargets-debug.cmake  WPEFrameworkMessagingTargets.cmake
dependencies/install/lib/cmake/WPEFrameworkPlugins/: WPEFrameworkPluginsConfig.cmake  WPEFrameworkPluginsTargets-debug.cmake  WPEFrameworkPluginsTargets.cmake
dependencies/install/lib/pkgconfig/: WPEFrameworkCore.pc  WPEFrameworkDefinitions.pc  WPEFrameworkPlugins.pc  WPEFrameworkWebSocket.pc
(+10 files in other folders)
